--- a/thesis/taxonomy_analysis.ltx
+++ b/thesis/taxonomy_analysis.ltx
@@ -39,7 +39,7 @@ The taxonomy contained in the Wikidata dump of \dumpdate{} was analyzed.
 It contains a total of $24,507,102$ items, of which $1,299,501$ are classes.
 Classes were recognized as defined in Section~\ref{section:wikidata}. 
 
-\subsection{Root taxonomy}
+\subsection{Root taxonomy}\label{section:root taxonomy}
 The state of the taxonomy was captured in regards to the root class \entity{} (see Figure~\ref{fig:root distance}).
 $1,260,842$ classes are currently subclasses of \entity{}.
 $97\%$ of all classes are  therefore nodes in the root taxonomy.
