Started Chapter "Conclusion".

--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -644,6 +644,39 @@ isbn="978-3-319-38791-8",
 doi="10.1007/978-3-319-38791-8_10",
 url="http://dx.doi.org/10.1007/978-3-319-38791-8_10"
 }
+% recurrent neural embeddings
+@article{Ororbia2017,
+  author    = {Alexander G. Ororbia II and
+               Tomas Mikolov and
+               David Reitter},
+  title     = {Learning Simpler Language Models with the Delta Recurrent Neural Network
+               Framework},
+  journal   = {CoRR},
+  volume    = {abs/1703.08864},
+  year      = {2017},
+  url       = {http://arxiv.org/abs/1703.08864},
+  timestamp = {Mon, 03 Apr 2017 12:41:34 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/OrorbiaMR17},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+@inproceedings{Mikolov2010,
+  added-at = {2015-04-09T00:00:00.000+0200},
+  author = {Mikolov, Tomas and Karafiát, Martin and Burget, Lukás and Cernocký, Jan and Khudanpur, Sanjeev},
+  biburl = {https://www.bibsonomy.org/bibtex/2aee1e280d06e82474b17c4996aaea076/dblp},
+  booktitle = {INTERSPEECH},
+  crossref = {conf/interspeech/2010},
+  editor = {Kobayashi, Takao and Hirose, Keikichi and Nakamura, Satoshi},
+  ee = {http://www.isca-speech.org/archive/interspeech_2010/i10_1045.html},
+  interhash = {9cabdcef2ed097906bff2cb7a327e61e},
+  intrahash = {aee1e280d06e82474b17c4996aaea076},
+  keywords = {dblp},
+  pages = {1045-1048},
+  publisher = {ISCA},
+  timestamp = {2015-06-21T06:10:05.000+0200},
+  title = {Recurrent neural network based language model.},
+  url = {http://dblp.uni-trier.de/db/conf/interspeech/interspeech2010.html#MikolovKBCK10},
+  year = 2010
+}
 
 
 % wikidata subclass of documentation
