--- a/thesis/thesis.ltx
+++ b/thesis/thesis.ltx
@@ -65,6 +65,7 @@
 \newpage
 
 \section{Conclusion and future work}\label{section:conclusion}
+\import{./}{conclusion.ltx}
 \newpage
 
 \bibliographystyle{plainnat}
