--- a/thesis/evaluation.ltx
+++ b/thesis/evaluation.ltx
@@ -101,18 +101,18 @@ where $G$ is the set of all gold test samples.
 \end{mdframed}
 \end{figure}
 
-A total of $-1$ triple sentences were extracted from the Wikidata dump \cite{WikidataDump}.
+A total of $109,267,818$ triple sentences were extracted from the Wikidata dump \cite{WikidataDump}.
 All entities, which have irrelevant properties, as defined in Section~\ref{section:relevant classes}, were excluded.
 All sentences representing test sample subclass-of relations were also excluded.
 
-A total of $-1$ graph walk sentences were generated.
-The sentences originated from $-1$ distinct classes. %atm 10,000
+A total of $288,770$ graph walk sentences were generated.
+The sentences originated from $28,877$ distinct classes.
 Sources for graph walk sentences were randomly chosen from the set of relevant classes.
-Graph walk sentences cover $\%$ of all relevant classes and $\%$ of all entities (excluding irrelevant entities).
+Graph walk sentences cover $24.03\%$ of all relevant classes and $0.33\%$ of all entities.
 
 Due to memory limitations, SGNS is only able to capture a certain vocabulary size. Therefore only $5,000,000$ words are represented by SGNS.
 Less frequent words have therefore no embeddings. This also affects a small number of relevant classes, which occur in the test samples.
-Therefore only $8,943$ of $10,000$ test samples can be used in the evaluation.
+Therefore only $8,943$ out of $10,000$ test samples can be used in the evaluation.
 
 \subsection{Results}
 The hybrid algorithms with the previously described parameters were executed.
