Removed deprecated text. Added TODOs.

--- a/thesis/algorithm.ltx
+++ b/thesis/algorithm.ltx
@@ -258,3 +258,6 @@ The appropiate superclass is subsequently the closest class embedding to the com
 
 The thesis' evaluation will show whether linear projection is superior to the distance-based kNN in the given task,
 and to what degree it benefits from word embeddings using graph walk sentences instead of triple sentences.
+
+\subsubsection{Non-linear regression via neural nets}
+\textbf{TODO: describe neural net architecture for simple non-linear regression task}
