--- a/thesis/conclusion.ltx
+++ b/thesis/conclusion.ltx
@@ -1,3 +1,5 @@
+\textbf{TODO: complete review of conclusion}
+
 In this thesis, hybrid algorithms using neural word embeddings for taxonomy enrichment were presented.
 The enrichment task was modeled as a classification task with over $100,000$ labels.
 The taxonomy was enriched by adding new subclass-of relations between orphan classes and classes in the root taxonomy.
