--- a/thesis/thesis.ltx
+++ b/thesis/thesis.ltx
@@ -23,6 +23,18 @@
 \selectlanguage{english}
 
 \maketitle %prints the cover page  an empty page if two-sided print
+
+\begin{abstract}
+\textbf{TODO: english abstract}
+\end{abstract}
+
+\selectlanguage{german}
+\begin{abstract}
+\textbf{TODO: german abstract}
+\end{abstract}
+
+\selectlanguage{english}
+
 \pagenumbering{roman}
 
 \tableofcontents
