--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -773,3 +773,39 @@ note={Accessed: 2016-11-20}
 	eprint = {http://biorxiv.org/content/early/2017/01/24/102046.full.pdf},
 	journal = {bioRxiv}
 }
+% ReLU and non-linear nn
+@inproceedings{Maas2013,
+  title={Rectifier Nonlinearities Improve Neural Network Acoustic Models},
+  author={Andrew L. Maas and Awni Y. Hannun and Andrew Y. Ng},
+  year={2013}
+}
+@article{Leshno1993,
+abstract = {Several researchers characterized the activation function under which multilayer feedforward networks can act as universal approximators. We show that most of all the characterizations that were reported thus far in the literature are special cases of the following general result: A standard multilayer feedforward network with a locally bounded piecewise continuous activation function can approximate any continuous function to any degree of accuracy if and only if the network's activation function is not a polynomial. We also emphasize the important role of the threshold, asserting that without it the last theorem does not hold. },
+author = {Leshno, Moshe and Lin, Vladimir Ya. and Pinkus, Allan and Schocken, Shimon},
+doi = {https://doi.org/10.1016/S0893-6080(05)80131-5},
+issn = {0893-6080},
+journal = {Neural Networks},
+keywords = {Activation functions,Lp($\mu$) approximation,Multilayer feedforward networks,Role of threshold,Universal approximation capabilities},
+mendeley-groups = {Neural Networks,Bachelor thesis},
+number = {6},
+pages = {861--867},
+title = {{Multilayer feedforward networks with a nonpolynomial activation function can approximate any function}},
+url = {http://www.sciencedirect.com/science/article/pii/S0893608005801315},
+volume = {6},
+year = {1993}
+}
+@article{Hornik1991,
+abstract = {We show that standard multilayer feedforward networks with as few as a single hidden layer and arbitrary bounded and nonconstant activation function are universal approximators with respect to Lp($\mu$) performance criteria, for arbitrary finite input environment measures $\mu$, provided only that sufficiently many hidden units are available. If the activation function is continuous, bounded and nonconstant, then continuous mappings can be learned uniformly over compact input sets. We also give very general conditions ensuring that networks with sufficiently smooth activation functions are capable of arbitrarily accurate approximation to a function and its derivatives. },
+author = {Hornik, Kurt},
+doi = {https://doi.org/10.1016/0893-6080(91)90009-T},
+issn = {0893-6080},
+journal = {Neural Networks},
+keywords = {Activation function,Input environment measure,Lp($\mu$) approximation,Multilayer feedforward networks,Smooth approximation,Sobolev spaces,Uniform approximation,Universal approximation capabilities},
+number = {2},
+pages = {251--257},
+title = {{Approximation capabilities of multilayer feedforward networks}},
+url = {http://www.sciencedirect.com/science/article/pii/089360809190009T},
+volume = {4},
+year = {1991}
+}
+
