--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -808,4 +808,20 @@ url = {http://www.sciencedirect.com/science/article/pii/089360809190009T},
 volume = {4},
 year = {1991}
 }
-
+@inproceedings{Glorot2011, 
+    Publisher = {Journal of Machine Learning Research - Workshop and Conference Proceedings}, 
+    Title = {Deep Sparse Rectifier Neural Networks}, 
+    Url = {http://www.jmlr.org/proceedings/papers/v15/glorot11a/glorot11a.pdf}, 
+    Booktitle = {Proceedings of the Fourteenth International Conference on Artificial Intelligence and Statistics (AISTATS-11)}, 
+    Author = {Xavier Glorot and Antoine Bordes and Yoshua Bengio}, 
+    Volume = {15}, 
+    Editor = {Geoffrey J. Gordon and David B. Dunson}, 
+    Year = {2011}, 
+    Pages = {315-323} 
+   }
+@inproceedings{Raghu2017,
+title = {On the expressive power of deep neural net-works},
+author  = {Maithra Raghu and Ben Poole and Jon Kleinberg and Surya Ganguli and Jascha Sohl-Dickstein},
+year  = 2017,
+URL = {https://arxiv.org/pdf/1606.05336.pdf}
+}
