--- a/thesis/evaluation.ltx
+++ b/thesis/evaluation.ltx
@@ -1,4 +1,4 @@
-\subsection{Method}
+\subsection{Method}\label{section:evaluation method}
 The hybrid algorithms are evaluated using a gold standard.
 The gold standard is fetched from the set of relevant classes (Section~\ref{section:relevant classes}) in the \dumpdate{} Wikidata dump \cite{WikidataDump}.
 $208,502$ classes and their corresponding superclasses were retrieved.
