--- a/thesis/preamble.sty
+++ b/thesis/preamble.sty
@@ -23,6 +23,9 @@
 \usepackage[framemethod=tikz]{mdframed} % frame around figures
 \usepackage{multicol} % multicolumn itemize and enumerate
 \usepackage{wrapfig}
+\usepackage[bottom]{footmisc}
+
+\raggedbottom
 
 % fullcite/1: cite both author and numeric code of reference
 \newcommand{\fullcite}[1]{\citeauthor{#1} \cite{#1}}
